tools/hrw4u/tests/data/hooks/order.fail.error.txt
tests/data/hooks/order.fail.input.txt:7:0: error: Variable section must be first in a section
   7 | VARS {
     | ^
